  - Added vpopmail_uidgid function to load, cache, and return vpopmail user UID and GID values
  - Updated various functions to use vpopmail_uidgid rather than use VPOPMAILUID and VPOPMAILGID defines
  - Fixed typo in configure script that said to use --with-vpopmail instead of --with-vpopuser
  - Updated user and group numerical discovery in configure script

  Manvendra Bhangui <mbhangui@users.sourceforge.net>
  - Added vmoddomain

  Luis Felipe Silveira da Silva <felipe@bsd.com.br>
  - Updated to provide maildrop flag in vlimits MySQL

  aledr <matrixworkstation@gmail.com>
  - Fixed input formatting in vpopmaild
  - Fixed bounds issue in vdelivermail
  - Updated MySQL module to use "INSERT INTO .. ON DUPLICATE KEY UPDATE" instead of "REPLACE INTO"
  - Fixed overflow in PostgreSQL module
  - Updated MySQL queries to use uppercase characters for SQL syntax

5.4.28 - Released 10-Mar-2009
   Matt Brookings
   - Updated vlimits_read_vlimits_file to be much more efficient
   - Added vusage client API to libvpopmail
   - Added vusage daemon
   - Updated quota code to talk to vusage daemon if available
   - Fixed some backfill patch compilation issues
   - Updated maildir_to_email to support paths that end in /Maildir as well as /Maildir/
   - Added LDAP valias support
   - Updated vusage API to return counts for both users and domains
   - Updated domain quota enforcement to work when using vusage
   - Re-enabled --enable-domainquotas (with warnings)
   - Fixed percentage calculation bug in vmaildir_readquota
   - Updated lastauth/vlog queries not to trigger failure condition on domain
     deletion in MySQL and PostgreSQL module
   - Updated build scripts to show version 5.4.28
   - Added solution for 5.4.28 to LDAP schema for sn and cn attributes being
     required.  A permanent solution will be added to the 5.5 tree
   - Fixed vdelivermail to process .qmail files for users with dashes in their
     usernames when qmail-ext is enabled
